data/derived/sp14/progs/unify/prog4142.ml.out
Characters 508-552:
  | Timmy2 (e1,e2)       -> (sin(pi*.eval(e,x,y))-.cos(pi*.eval(e,x,y)))/3;;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
